--- a/style.css
+++ b/style.css
@@ -164,10 +164,14 @@ margin: 10px 0;
 .course-col:hover{
 box-shadow: 0 0 20px 0px rgba(0, 0, 0, 0.2);
 @media(max-width: 700px){
- .row{  flex-direction: column;
+
+ }
+ .row{
+flex-direction: column;
+justify-content: space-between;
  }
 }
-}
+
 
 /*--------campus--------*/
 
@@ -255,6 +259,7 @@ width: 80%;
 margin: auto;
 padding-top: 100px;
 text-align: center;
+flex-direction: column;
 }
 .testimonial-col{
 flex-basis: 44%;
